--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -15,10 +15,10 @@
       "\u001b[01;34mchangedetection\u001b[0m/  LICENSE       \u001b[01;34mpretrained_weight\u001b[0m/\n",
       "\u001b[01;34mclassification\u001b[0m/   \u001b[01;34mLOGLAR_CMAG\u001b[0m/  README.md\n",
       "\u001b[01;34mfigures\u001b[0m/          modelcard.sh  README_zh-CN.md\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-19_18-02-44_xBD_MambaBDA_Base.log\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-19_18-02-44_xBD_MambaBDA_Base.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-21_13-41-18_mwBTFreddy_MambaBDA_Base.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-21_13-41-18_mwBTFreddy_MambaBDA_Base.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+ 1566682       1  0 18:02 ?        00:00:01 python -u changedetection/sc\n"
+      "alperen+ 1875845       1  0 13:41 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -34,7 +34,7 @@
     "from datetime import datetime\n",
     "now = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "\n",
+    "# ================= MODEL CONFIG ================= #\n",
     "cfg_dict = {\n",
     "    \"MambaBDA_Tiny\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
     "    \"MambaBDA_Small\": '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
@@ -46,11 +46,41 @@
     "    \"MambaBDA_Base\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_base_0229_ckpt_epoch_237.pth',\n",
     "}\n",
     "\n",
+    "# ================= DATASET CONFIG ================= #\n",
+    "train_dataset_paths_dict = {\n",
+    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/train_combined',\n",
+    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0',\n",
+    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0_png',\n",
+    "}\n",
+    "train_data_list_paths_dict = {\n",
+    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
+    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/train_list.txt',\n",
+    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/train_list.txt',\n",
+    "}\n",
+    "\n",
+    "test_dataset_paths_dict = {\n",
+    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/test',\n",
+    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0',\n",
+    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0_png',\n",
+    "}\n",
+    "test_data_list_paths_dict = {\n",
+    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/test_list.txt',\n",
+    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/test_list.txt',\n",
+    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/test_list.txt',\n",
+    "}\n",
+    "\n",
+    "\n",
     "MODEL_NAME = 'MambaBDA_Base'\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\"\n",
+    "DATASET = \"mwBTFreddy\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
     "pretrained_file = pretrained_dict[MODEL_NAME]\n",
+    "\n",
+    "train_dataset_path = train_dataset_paths_dict[DATASET]\n",
+    "train_data_list_path = train_data_list_paths_dict[DATASET]\n",
+    "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
+    "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
     "\n",
     "logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{DATASET}_{MODEL_NAME}.log\"\n",
     "pidfilename = logfilename.replace(\".log\", \".pid.log\")\n",
@@ -69,22 +99,23 @@
     "\"\"\"\n",
     "\n",
     "COMMAND = f\"\"\"\n",
-    "nohup python -u changedetection/script/train_MambaBDA.py \\\n",
+    "CUDA_LAUNCH_BLOCKING=1 nohup python -u changedetection/script/train_MambaBDA.py \\\n",
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             4 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              400_000 \\\n",
+    "     --max_iters              40_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
-    "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}' \\\n",
-    "     --train_dataset_path     '/storage/alperengenc/change_detection/xBD_complete_png/train_combined' \\\n",
-    "     --train_data_list_path   '/storage/alperengenc/change_detection/xBD_complete_png/train_combined_list.txt' \\\n",
-    "     --test_dataset_path      '/storage/alperengenc/change_detection/xBD_complete_png/test' \\\n",
-    "     --test_data_list_path    '/storage/alperengenc/change_detection/xBD_complete_png/test_list.txt' \\\n",
+    "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}' \\\n",
+    "     --train_dataset_path     {train_dataset_path} \\\n",
+    "     --train_data_list_path   {train_data_list_path} \\\n",
+    "     --test_dataset_path      {test_dataset_path} \\\n",
+    "     --test_data_list_path    {test_data_list_path} \\\n",
     "     --cfg                    {cfg_file} \\\n",
     "     --logfile                {logfilename} \\\n",
     "     --pretrained_weight_path {pretrained_file} \\\n",
     "     --learning_rate          0.0001 \\\n",
     "     --weight_decay           0.005 \\\n",
+    "     --extension              {EXTENSION} \\\n",
     "     >/dev/null 2>&1 & echo $! > {pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "#*-- last line alternative for realtime stdout along with file (tee)\n",
@@ -96,6 +127,79 @@
     "# BEFORE RERUNNING: check if still running:\n",
     "# ps -fp $(cat <pidfilename>) || echo \"not running\"\n",
     "!ps -fp $(cat {pidfilename}) || echo \"not running\" && rm {pidfilename}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "070ec3e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/storage/alperengenc/change_detection/ChangeMamba_AG\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_2025-09-20_20-23-03_mwBTFreddy_MambaBDA_Base.log\n",
+      "UID          PID    PPID  C STIME TTY          TIME CMD\n",
+      "alperen+ 1781544       1  0 20:23 ?        00:00:01 python -u changedetection/sc\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2025.09.20 - inference / test for xBD & mwBTFreddy\n",
+    "\n",
+    "%cd /storage/alperengenc/change_detection/ChangeMamba_AG\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "from datetime import datetime\n",
+    "now = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "\n",
+    "cfg_dict = {\n",
+    "    \"MambaBDA_Tiny\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
+    "    \"MambaBDA_Small\": '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
+    "    \"MambaBDA_Base\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
+    "}\n",
+    "test_dataset_paths_dict = {\n",
+    "    \"xBD\"       : '/storage/alperengenc/change_detection/xBD_complete_png/test',\n",
+    "    \"mwBTFreddy\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0'\n",
+    "}\n",
+    "test_data_list_paths_dict = {\n",
+    "    \"xBD\"       : '/storage/alperengenc/change_detection/xBD_complete_png/test_list.txt',\n",
+    "    \"mwBTFreddy\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/all_list.txt'\n",
+    "}\n",
+    "\n",
+    "MODEL_NAME = 'MambaBDA_Base'\n",
+    "DATASET = \"mwBTFreddy\" # \"xBD\" || \"mwBTFreddy\"\n",
+    "\n",
+    "cfg_file = cfg_dict[MODEL_NAME]\n",
+    "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
+    "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
+    "\n",
+    "infer_logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{now}_{DATASET}_{MODEL_NAME}.log\"\n",
+    "infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-19_18-02-44/xBD/MambaBDA_Base_1758294167.6313677/100000_model_2025-09-20_03-14-53.pth'\n",
+    "print(infer_logfilename)\n",
+    "infer_pidfilename = \"inferpid.pid\"\n",
+    "\n",
+    "INFER_COMMAND = f\"\"\"\n",
+    "nohup python -u changedetection/script/infer_MambaBDA.py \\\n",
+    "    --dataset                   {DATASET}  \\\n",
+    "    --type                      'test' \\\n",
+    "    --model_type                {MODEL_NAME} \\\n",
+    "    --test_dataset_path         {test_dataset_path} \\\n",
+    "    --test_data_list_path       {test_data_list_path} \\\n",
+    "    --result_saved_path         '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/infer_results/in{now}'\n",
+    "    --cfg                       {cfg_file} \\\n",
+    "    --resume                    {infer_model_path} \\\n",
+    "    --logfile                   {infer_logfilename} \\\n",
+    "    --no-save_output_images \\\n",
+    "    >/dev/null 2>&1 & echo $! > {infer_pidfilename}\n",
+    "\"\"\".replace(\"\\n\", \"\")\n",
+    "\n",
+    "os.system(command=INFER_COMMAND)\n",
+    "!ps -fp $(cat {infer_pidfilename}) || echo \"not running\" && rm {infer_pidfilename}\n",
+    "\n"
    ]
   }
  ],
