[feature,rev]: Focal loss, confusion matrix, file naming: - added Focal Loss implementation. training can be started with or without it using focal_loss arg. - added Confusion matrix logging to enable more detailed analysis. - changed logfile and modelsave naming

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -15,10 +15,10 @@
       "\u001b[01;34mchangedetection\u001b[0m/  LICENSE       \u001b[01;34mpretrained_weight\u001b[0m/\n",
       "\u001b[01;34mclassification\u001b[0m/   \u001b[01;34mLOGLAR_CMAG\u001b[0m/  README.md\n",
       "\u001b[01;34mfigures\u001b[0m/          modelcard.sh  README_zh-CN.md\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-21_13-41-18_mwBTFreddy_MambaBDA_Base.log\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-21_13-41-18_mwBTFreddy_MambaBDA_Base.pid.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_09-33-26_MambaBDA_Tiny_xBD_FOCAL.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_09-33-26_MambaBDA_Tiny_xBD_FOCAL.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+ 1875845       1  0 13:41 ?        00:00:01 python -u changedetection/sc\n"
+      "alperen+ 2392145       1  0 09:33 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -70,19 +70,20 @@
     "}\n",
     "\n",
     "\n",
-    "MODEL_NAME = 'MambaBDA_Base'\n",
-    "DATASET = \"mwBTFreddy\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
     "pretrained_file = pretrained_dict[MODEL_NAME]\n",
+    "FOCAL = True # True || False\n",
     "\n",
     "train_dataset_path = train_dataset_paths_dict[DATASET]\n",
     "train_data_list_path = train_data_list_paths_dict[DATASET]\n",
     "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
     "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
     "\n",
-    "logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{DATASET}_{MODEL_NAME}.log\"\n",
+    "logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{MODEL_NAME}_{DATASET}{'_FOCAL' if FOCAL else ''}.log\"\n",
     "pidfilename = logfilename.replace(\".log\", \".pid.log\")\n",
     "print(logfilename)\n",
     "print(pidfilename)\n",
@@ -103,9 +104,9 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             4 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              40_000 \\\n",
+    "     --max_iters              200_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
-    "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}' \\\n",
+    "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{'_FOCAL' if FOCAL else ''}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
     "     --train_data_list_path   {train_data_list_path} \\\n",
     "     --test_dataset_path      {test_dataset_path} \\\n",
@@ -116,6 +117,7 @@
     "     --learning_rate          0.0001 \\\n",
     "     --weight_decay           0.005 \\\n",
     "     --extension              {EXTENSION} \\\n",
+    "     {'--focal_loss' if FOCAL else ''} \\\n",
     "     >/dev/null 2>&1 & echo $! > {pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
     "#*-- last line alternative for realtime stdout along with file (tee)\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "070ec3e2",
    "metadata": {},
    "outputs": [
@@ -140,9 +142,9 @@
      "output_type": "stream",
      "text": [
       "/storage/alperengenc/change_detection/ChangeMamba_AG\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_2025-09-20_20-23-03_mwBTFreddy_MambaBDA_Base.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD_on_xBD.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+ 1781544       1  0 20:23 ?        00:00:01 python -u changedetection/sc\n"
+      "alperen+ 2045188       1  0 12:02 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -170,15 +172,20 @@
     "    \"mwBTFreddy\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/all_list.txt'\n",
     "}\n",
     "\n",
-    "MODEL_NAME = 'MambaBDA_Base'\n",
-    "DATASET = \"mwBTFreddy\" # \"xBD\" || \"mwBTFreddy\"\n",
+    "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
     "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
     "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
     "\n",
-    "infer_logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{now}_{DATASET}_{MODEL_NAME}.log\"\n",
-    "infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-19_18-02-44/xBD/MambaBDA_Base_1758294167.6313677/100000_model_2025-09-20_03-14-53.pth'\n",
+    "# infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
+    "infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
+    "_, _trained_model_folder, _trained_model_pthname = infer_model_path.rsplit(\"/\", 2)\n",
+    "trained_model_name = f'{_trained_model_folder}'\n",
+    "\n",
+    "infer_logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{trained_model_name}_on_{DATASET}.log\"\n",
     "print(infer_logfilename)\n",
     "infer_pidfilename = \"inferpid.pid\"\n",
     "\n",
@@ -193,6 +200,7 @@
     "    --cfg                       {cfg_file} \\\n",
     "    --resume                    {infer_model_path} \\\n",
     "    --logfile                   {infer_logfilename} \\\n",
+    "    --extension                 {EXTENSION} \\\n",
     "    --no-save_output_images \\\n",
     "    >/dev/null 2>&1 & echo $! > {infer_pidfilename}\n",
     "\"\"\".replace(\"\\n\", \"\")\n",
