change focal loss to be hybrid CE-FOCAL combination. +new logs

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0d98acc1",
+   "metadata": {},
+   "source": [
+    "## Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a2975496",
@@ -11,14 +19,15 @@
      "output_type": "stream",
      "text": [
       "/storage/alperengenc/change_detection/ChangeMamba_AG\n",
-      "\u001b[0m\u001b[01;34manalyze\u001b[0m/          \u001b[01;34mkernels\u001b[0m/      pipeline_changemamba.ipynb  requirements.txt\n",
-      "\u001b[01;34mchangedetection\u001b[0m/  LICENSE       \u001b[01;34mpretrained_weight\u001b[0m/\n",
-      "\u001b[01;34mclassification\u001b[0m/   \u001b[01;34mLOGLAR_CMAG\u001b[0m/  README.md\n",
-      "\u001b[01;34mfigures\u001b[0m/          modelcard.sh  README_zh-CN.md\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_09-33-26_MambaBDA_Tiny_xBD_FOCAL.log\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_09-33-26_MambaBDA_Tiny_xBD_FOCAL.pid.log\n",
+      "\u001b[0m\u001b[01;34manalyze\u001b[0m/                   \u001b[01;34mkernels\u001b[0m/                    \u001b[01;34mpretrained_weight\u001b[0m/\n",
+      "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
+      "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
+      "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL.log\n",
+      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+ 2392145       1  0 09:33 ?        00:00:01 python -u changedetection/sc\n"
+      "alperen+  266577       1  0 22:02 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -70,7 +79,7 @@
     "}\n",
     "\n",
     "\n",
-    "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
+    "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
     "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
@@ -104,7 +113,7 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             4 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              200_000 \\\n",
+    "     --max_iters              400_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
     "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{'_FOCAL' if FOCAL else ''}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
@@ -129,6 +138,14 @@
     "# BEFORE RERUNNING: check if still running:\n",
     "# ps -fp $(cat <pidfilename>) || echo \"not running\"\n",
     "!ps -fp $(cat {pidfilename}) || echo \"not running\" && rm {pidfilename}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed3dad23",
+   "metadata": {},
+   "source": [
+    "## Inference"
    ]
   },
   {
