added Earthquake Turkey dataset analysis files and initial training logs

--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -18,23 +18,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/storage/alperengenc/change_detection/ChangeMamba_AG\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
       "\u001b[0m\u001b[01;34manalyze\u001b[0m/                   \u001b[01;34mkernels\u001b[0m/                    \u001b[01;34mpretrained_weight\u001b[0m/\n",
       "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
-      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL.log\n",
-      "/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL.pid.log\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alpgenc/miniconda3/envs/changemamba2/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
+      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-25_17-11-48_MambaBDA_Base_EarthquakeTurkey_FOCAL.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-25_17-11-48_MambaBDA_Base_EarthquakeTurkey_FOCAL.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alperen+  266577       1  0 22:02 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc  3066875       1  0 17:11 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
    "source": [
     "# 2025.09.18 - train for xBD & mwBTFreddy\n",
     "\n",
-    "%cd /storage/alperengenc/change_detection/ChangeMamba_AG\n",
+    "%cd /mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
     "%ls\n",
     "\n",
     "import os\n",
@@ -45,54 +59,63 @@
     "\n",
     "# ================= MODEL CONFIG ================= #\n",
     "cfg_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
-    "    \"MambaBDA_Small\": '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
-    "    \"MambaBDA_Base\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
+    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
+    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
+    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
     "}\n",
     "pretrained_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_tiny_0230_ckpt_epoch_262.pth',\n",
-    "    \"MambaBDA_Small\": '/storage/alperengenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_small_0229_ckpt_epoch_222.pth',\n",
-    "    \"MambaBDA_Base\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_base_0229_ckpt_epoch_237.pth',\n",
+    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_tiny_0230_ckpt_epoch_262.pth',\n",
+    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_small_0229_ckpt_epoch_222.pth',\n",
+    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_base_0229_ckpt_epoch_237.pth',\n",
     "}\n",
     "\n",
     "# ================= DATASET CONFIG ================= #\n",
     "train_dataset_paths_dict = {\n",
-    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/train_combined',\n",
-    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0',\n",
-    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0_png',\n",
+    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
+    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
+    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0_png',\n",
+    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey',\n",
     "}\n",
     "train_data_list_paths_dict = {\n",
-    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
-    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/train_list.txt',\n",
-    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/train_list.txt',\n",
+    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
+    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/train_list.txt',\n",
+    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/train_list.txt',\n",
+    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/train_list.txt',\n",
     "}\n",
     "\n",
     "test_dataset_paths_dict = {\n",
-    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/test',\n",
-    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0',\n",
-    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0_png',\n",
+    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
+    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0_png',\n",
+    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey', \n",
     "}\n",
     "test_data_list_paths_dict = {\n",
-    "    \"xBD\"           : '/storage/alperengenc/change_detection/xBD_complete_png/test_list.txt',\n",
-    "    \"mwBTFreddy\"    : '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/test_list.txt',\n",
-    "    \"mwBTFreddy_png\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/test_list.txt',\n",
+    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt',\n",
+    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/test_list.txt',\n",
+    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/test_list.txt',\n",
+    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/test_list.txt'\n",
     "}\n",
     "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
+    "DATASET = \"EarthquakeTurkey\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\" || \"EarthquakeTurkey\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
-    "pretrained_file = pretrained_dict[MODEL_NAME]\n",
+    "# pretrained_file = pretrained_dict[MODEL_NAME] # Use this to train from \"scratch\" (almost) || use next line to fine tune a trained model.\n",
+    "pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
     "FOCAL = True # True || False\n",
+    "\n",
+    "FOCAL_str = '_FOCAL' if FOCAL else ''\n",
+    "FT_str = '_FT' if 'tr2025' in pretrained_file else '' # 'tr2025' -> already trained model, so new training using this will be a fine tune.\n",
+    "\n",
     "\n",
     "train_dataset_path = train_dataset_paths_dict[DATASET]\n",
     "train_data_list_path = train_data_list_paths_dict[DATASET]\n",
     "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
     "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
     "\n",
-    "logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{MODEL_NAME}_{DATASET}{'_FOCAL' if FOCAL else ''}.log\"\n",
+    "logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}.log\"\n",
     "pidfilename = logfilename.replace(\".log\", \".pid.log\")\n",
     "print(logfilename)\n",
     "print(pidfilename)\n",
@@ -111,11 +134,11 @@
     "COMMAND = f\"\"\"\n",
     "CUDA_LAUNCH_BLOCKING=1 nohup python -u changedetection/script/train_MambaBDA.py \\\n",
     "     --dataset                {DATASET} \\\n",
-    "     --batch_size             4 \\\n",
+    "     --batch_size             8 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              400_000 \\\n",
+    "     --max_iters              200_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
-    "     --model_param_path       '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{'_FOCAL' if FOCAL else ''}' \\\n",
+    "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
     "     --train_data_list_path   {train_data_list_path} \\\n",
     "     --test_dataset_path      {test_dataset_path} \\\n",
@@ -150,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "070ec3e2",
    "metadata": {},
    "outputs": [
@@ -168,7 +191,7 @@
    "source": [
     "# 2025.09.20 - inference / test for xBD & mwBTFreddy\n",
     "\n",
-    "%cd /storage/alperengenc/change_detection/ChangeMamba_AG\n",
+    "%cd /mnt/storage1/alpgenc/change_detection/ChangeMamba_AG\n",
     "\n",
     "import os\n",
     "\n",
@@ -176,17 +199,17 @@
     "now = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
     "cfg_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
-    "    \"MambaBDA_Small\": '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
-    "    \"MambaBDA_Base\" : '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
+    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
+    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
+    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
     "}\n",
     "test_dataset_paths_dict = {\n",
-    "    \"xBD\"       : '/storage/alperengenc/change_detection/xBD_complete_png/test',\n",
-    "    \"mwBTFreddy\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0'\n",
+    "    \"xBD\"       : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "    \"mwBTFreddy\": '/mnt/storage1/alpgenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0'\n",
     "}\n",
     "test_data_list_paths_dict = {\n",
-    "    \"xBD\"       : '/storage/alperengenc/change_detection/xBD_complete_png/test_list.txt',\n",
-    "    \"mwBTFreddy\": '/storage/alperengenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/all_list.txt'\n",
+    "    \"xBD\"       : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt',\n",
+    "    \"mwBTFreddy\": '/mnt/storage1/alpgenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/all_list.txt'\n",
     "}\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
@@ -197,12 +220,12 @@
     "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
     "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
     "\n",
-    "# infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
-    "infer_model_path = '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
+    "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
+    "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
     "_, _trained_model_folder, _trained_model_pthname = infer_model_path.rsplit(\"/\", 2)\n",
     "trained_model_name = f'{_trained_model_folder}'\n",
     "\n",
-    "infer_logfilename = f\"/storage/alperengenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{trained_model_name}_on_{DATASET}.log\"\n",
+    "infer_logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/infer_{trained_model_name}_on_{DATASET}.log\"\n",
     "print(infer_logfilename)\n",
     "infer_pidfilename = \"inferpid.pid\"\n",
     "\n",
@@ -213,7 +236,7 @@
     "    --model_type                {MODEL_NAME} \\\n",
     "    --test_dataset_path         {test_dataset_path} \\\n",
     "    --test_data_list_path       {test_data_list_path} \\\n",
-    "    --result_saved_path         '/storage/alperengenc/change_detection/ChangeMamba_AG/changedetection/infer_results/in{now}'\n",
+    "    --result_saved_path         '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/infer_results/in{now}'\n",
     "    --cfg                       {cfg_file} \\\n",
     "    --resume                    {infer_model_path} \\\n",
     "    --logfile                   {infer_logfilename} \\\n",
