--- a/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
+++ b/dataset_analysis_scripts/xBD_dataset_analysis.ipynb
@@ -367,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating paths in ./xBD_complete_png/train_combined ...\n",
+      "Generating paths in /mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined ...\n",
       "Done, len(all_data) = 9168\n"
      ]
     },
@@ -382,7 +382,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9168/9168 [25:04<00:00,  6.09it/s]  "
+      "100%|██████████| 9168/9168 [01:33<00:00, 97.55it/s] "
      ]
     },
     {
@@ -439,7 +439,8 @@
     "    \"\"\"base name; without path, pre-post suffix and extension.\"\"\"\n",
     "    \n",
     "\n",
-    "BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
+    "# BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
+    "BASE_PATH = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined\"\n",
     "all_pre_images = glob.glob(f\"{BASE_PATH}/images/*_pre_disaster.png\")\n",
     "\n",
     "all_data: list[DataPaths] = []\n",
@@ -505,7 +506,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating paths in /mnt/storage1/alpgenc/change_detection/xBD_complete_png/test ...\n",
+      "Done, len(all_test_data) = 933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 933/933 [00:07<00:00, 125.77it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Statistics ===\n",
+      "All Test Data: 933\n",
+      "Number of images that doesn't contain any buildings: 194\n",
+      "Number of images that doesn't contain any damaged buildings: 257\n",
+      "Number of images with at most Minor Damage level: 57\n",
+      "Number of images with at most Major Damage level: 137\n",
+      "Number of images with at most Destroyed level: 288\n",
+      " *** \n",
+      "Number of images that contain backround: 933\n",
+      "Number of images that contain undamaged buildings: 570\n",
+      "Number of images that contain Minor Damage level: 244\n",
+      "Number of images that contain Major Damage level: 294\n",
+      "Number of images that contain Destroyed level: 288\n",
+      " *** \n",
+      "Ratio of undamaged pixels: 76.6715%\n",
+      "Ratio of Minor Damage pixels: 8.2977%\n",
+      "Ratio of Major Damage pixels: 9.6654%\n",
+      "Ratio of Destroyed pixels: 5.3654%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tifffile as tf\n",
+    "import glob\n",
+    "import os.path\n",
+    "from dataclasses import dataclass\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "@dataclass\n",
+    "class DataPaths:\n",
+    "    pre_img: str\n",
+    "    post_img: str\n",
+    "    pre_target: str\n",
+    "    post_target: str\n",
+    "    stem: str\n",
+    "    \"\"\"base name; without path, pre-post suffix and extension.\"\"\"\n",
+    "    \n",
+    "\n",
+    "# BASE_PATH = \"/storage/alperengenc/change_detection/xBD_complete_png/train_combined\"\n",
+    "TEST_BASE_PATH = \"/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test\"\n",
+    "_all_pre_images = glob.glob(f\"{TEST_BASE_PATH}/images/*_pre_disaster.png\")\n",
+    "\n",
+    "all_test_data: list[DataPaths] = []\n",
+    "\n",
+    "print(f\"Generating paths in {TEST_BASE_PATH} ...\")\n",
+    "for i, pre_img_path in enumerate(_all_pre_images):\n",
+    "    post_img_path = pre_img_path.replace(\"pre\", \"post\")\n",
+    "    img_base, _, _ = pre_img_path.rsplit(\"_\", 2) # path/to/images/malawi-cyclone_00000342_pre_disaster.tif\n",
+    "\n",
+    "    target_base = img_base.replace(\"images\", \"targets\")\n",
+    "    pre_target_path = f\"{target_base}_pre_disaster_target.png\"\n",
+    "    post_target_path = f\"{target_base}_post_disaster_target.png\"\n",
+    "\n",
+    "    stem = os.path.basename(img_base)\n",
+    "\n",
+    "    all_test_data.append(DataPaths(pre_img_path, post_img_path, pre_target_path, post_target_path, stem))\n",
+    "print(f\"Done, {len(all_test_data) = }\")\n",
+    "\n",
+    "damage_levels_dict = {\n",
+    "    0: \"Not Building\",\n",
+    "    1: \"No Damage\",\n",
+    "    2: \"Minor Damage\",\n",
+    "    3: \"Major Damage\",\n",
+    "    4: \"Destroyed\"\n",
+    "}\n",
+    "\n",
+    "max_levels = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_existences = {0: 0, 1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "dmg_level_pixel_counts = {1: 0, 2: 0, 3: 0, 4: 0}\n",
+    "for data in tqdm(all_test_data):\n",
+    "    post_target = cv2.imread(data.post_target, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "    maxlvl = post_target.max()\n",
+    "    max_levels[maxlvl] += 1\n",
+    "\n",
+    "    unq = np.unique(post_target)\n",
+    "    for val in unq:\n",
+    "        dmg_level_existences[val] += 1\n",
+    "        if val != 0:\n",
+    "            dmg_level_pixel_counts[val] += (post_target == val).sum()\n",
+    "\n",
+    "total_pix_count = sum(dmg_level_pixel_counts.values())\n",
+    "\n",
+    "print(\"=== Statistics ===\")\n",
+    "print(\"All Test Data:\", len(all_test_data))\n",
+    "print(\"Number of images that doesn't contain any buildings:\", max_levels[0])\n",
+    "print(\"Number of images that doesn't contain any damaged buildings:\", max_levels[1])\n",
+    "print(\"Number of images with at most Minor Damage level:\", max_levels[2])\n",
+    "print(\"Number of images with at most Major Damage level:\", max_levels[3])\n",
+    "print(\"Number of images with at most Destroyed level:\", max_levels[4])\n",
+    "print(\" *** \")\n",
+    "print(\"Number of images that contain backround:\", dmg_level_existences[0])\n",
+    "print(\"Number of images that contain undamaged buildings:\", dmg_level_existences[1])\n",
+    "print(\"Number of images that contain Minor Damage level:\", dmg_level_existences[2])\n",
+    "print(\"Number of images that contain Major Damage level:\", dmg_level_existences[3])\n",
+    "print(\"Number of images that contain Destroyed level:\", dmg_level_existences[4])\n",
+    "print(\" *** \")\n",
+    "print(f\"Ratio of undamaged pixels: {dmg_level_pixel_counts[1] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Minor Damage pixels: {dmg_level_pixel_counts[2] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Major Damage pixels: {dmg_level_pixel_counts[3] / total_pix_count:.4%}\")\n",
+    "print(f\"Ratio of Destroyed pixels: {dmg_level_pixel_counts[4] / total_pix_count:.4%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +657,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9168/9168 [01:16<00:00, 120.32it/s]"
+      "100%|██████████| 9168/9168 [01:28<00:00, 103.61it/s]"
      ]
     },
     {
@@ -549,10 +687,55 @@
     "    unq = np.unique(im)\n",
     "    if (np.unique((0)) == unq).all(): # might be only background\n",
     "        continue\n",
-    "    if unq.size != 2 or (np.unique((0,1)) != unq).all():\n",
+    "    if unq.size != 2 or (np.unique((0,1)) != unq).any():\n",
     "        print(f\"{d.pre_target}: {unq}\")\n",
     "        incorrect_count += 1\n",
     "print(f\"{incorrect_count = }\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning; create data paths (all_data) in the previous cells before running this.\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list2.txt\n",
+      "Generated: /mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list2.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "import os.path\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "print(\"Warning; create data paths (all_data) in the previous cells before running this.\")\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "def create_train_test_lists2(base_path: str, test_base_path: str, all_data: list[DataPaths],  all_test_data: list[DataPaths]):\n",
+    "    with open(f\"{base_path}/train_list2.txt\", \"w\") as f:\n",
+    "        for d in all_data:\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "    with open(f\"{test_base_path}/test_list2.txt\", \"w\") as f:\n",
+    "        for d in all_test_data:\n",
+    "            f.write(f\"{d.stem}\\n\")\n",
+    "        print(f\"Generated: {os.path.realpath(f.name)}\")\n",
+    "\n",
+    "################################################################################################################\n",
+    "\n",
+    "TRAIN_RATIO = 0.80\n",
+    "\n",
+    "create_train_test_lists2(BASE_PATH, TEST_BASE_PATH, all_data, all_test_data)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1091,7 +1274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "changemamba2",
+   "display_name": "vision",
    "language": "python",
    "name": "python3"
   },
@@ -1105,7 +1288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
