--- a/pipeline_changemamba.ipynb
+++ b/pipeline_changemamba.ipynb
@@ -2,6 +2,96 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0c24cc4a",
+   "metadata": {},
+   "source": [
+    "## Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c2204f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of datasets: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "# ================= MODEL CONFIG ================= #\n",
+    "cfg_dict = {\n",
+    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
+    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
+    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
+    "}\n",
+    "pretrained_dict = {\n",
+    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_tiny_0230_ckpt_epoch_262.pth',\n",
+    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_small_0229_ckpt_epoch_222.pth',\n",
+    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_base_0229_ckpt_epoch_237.pth',\n",
+    "}\n",
+    "\n",
+    "# ================= DATASET CONFIG ================= #\n",
+    "@dataclass\n",
+    "class DatasetInfo:\n",
+    "    train_dataset_path: str\n",
+    "    train_data_list_path: str\n",
+    "    test_dataset_path: str\n",
+    "    test_data_list_path: str\n",
+    "\n",
+    "dataset_info_dict = {\n",
+    "    \"xBD\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt'\n",
+    "    ),\n",
+    "    \"xBD2\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined/train_list2.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test/test_list2.txt'\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"mwBTFreddy\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/test_list.txt'\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"EarthquakeTurkey\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/test_list.txt'\n",
+    "    ),\n",
+    "    ###############################################\n",
+    "    \"HurricaneIda\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/hurricane-ida',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/hurricane-ida/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/hurricane-ida',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/hurricane-ida/test_list.txt',\n",
+    "    ),\n",
+    "    \"HurricaneIdaFiltered\": DatasetInfo(\n",
+    "        train_dataset_path   = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered',\n",
+    "        train_data_list_path = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered/train_list.txt',\n",
+    "        test_dataset_path    = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered',\n",
+    "        test_data_list_path  = '/mnt/storage1/alpgenc/change_detection/datasets/hurricane_ida/filtered/test_list.txt',\n",
+    "    )\n",
+    "}\n",
+    "print(f\"Number of datasets: {len(dataset_info_dict)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d98acc1",
    "metadata": {},
    "source": [
@@ -10,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a2975496",
    "metadata": {},
    "outputs": [
@@ -23,25 +113,11 @@
       "\u001b[01;34mchangedetection\u001b[0m/           LICENSE                     README.md\n",
       "\u001b[01;34mclassification\u001b[0m/            \u001b[01;34mLOGLAR_CMAG\u001b[0m/                README_zh-CN.md\n",
       "\u001b[01;34mdataset_analysis_scripts\u001b[0m/  modelcard.sh                requirements.txt\n",
-      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alpgenc/miniconda3/envs/changemamba2/lib/python3.10/site-packages/IPython/core/magics/osm.py:417: UserWarning: This is now an optional IPython functionality, setting dhist requires you to install the `pickleshare` library.\n",
-      "  self.shell.db['dhist'] = compress_dhist(dhist)[-100:]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-25_17-11-48_MambaBDA_Base_EarthquakeTurkey_FOCAL.log\n",
-      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-25_17-11-48_MambaBDA_Base_EarthquakeTurkey_FOCAL.pid.log\n",
+      "\u001b[01;34mfigures\u001b[0m/                   pipeline_changemamba.ipynb\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-28_01-27-21_MambaBDA_Base_xBD_FOCAL.log\n",
+      "/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_2025-09-28_01-27-21_MambaBDA_Base_xBD_FOCAL.pid.log\n",
       "UID          PID    PPID  C STIME TTY          TIME CMD\n",
-      "alpgenc  3066875       1  0 17:11 ?        00:00:01 python -u changedetection/sc\n"
+      "alpgenc  3504639       1  0 01:27 ?        00:00:01 python -u changedetection/sc\n"
      ]
     }
    ],
@@ -57,63 +133,26 @@
     "from datetime import datetime\n",
     "now = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "# ================= MODEL CONFIG ================= #\n",
-    "cfg_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
-    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
-    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
-    "}\n",
-    "pretrained_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_tiny_0230_ckpt_epoch_262.pth',\n",
-    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_small_0229_ckpt_epoch_222.pth',\n",
-    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/pretrained_weight/vssm_base_0229_ckpt_epoch_237.pth',\n",
-    "}\n",
-    "\n",
-    "# ================= DATASET CONFIG ================= #\n",
-    "train_dataset_paths_dict = {\n",
-    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined',\n",
-    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
-    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0_png',\n",
-    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey',\n",
-    "}\n",
-    "train_data_list_paths_dict = {\n",
-    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/train_combined_list.txt',\n",
-    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/train_list.txt',\n",
-    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/train_list.txt',\n",
-    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/train_list.txt',\n",
-    "}\n",
-    "\n",
-    "test_dataset_paths_dict = {\n",
-    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
-    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0',\n",
-    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0_png',\n",
-    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey', \n",
-    "}\n",
-    "test_data_list_paths_dict = {\n",
-    "    \"xBD\"               : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt',\n",
-    "    \"mwBTFreddy\"        : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/test_list.txt',\n",
-    "    \"mwBTFreddy_png\"    : '/mnt/storage1/alpgenc/change_detection/datasets/mwBTFreddy/mwBTFreddy_v1.0/test_list.txt',\n",
-    "    \"EarthquakeTurkey\"  : '/mnt/storage1/alpgenc/change_detection/datasets/earthquake_turkey/earthquake-turkey/test_list.txt'\n",
-    "}\n",
-    "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Base' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
-    "DATASET = \"EarthquakeTurkey\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\" || \"EarthquakeTurkey\"\n",
+    "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"EarthquakeTurkey\" || \"HurricaneIda\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
-    "# pretrained_file = pretrained_dict[MODEL_NAME] # Use this to train from \"scratch\" (almost) || use next line to fine tune a trained model.\n",
-    "pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
+    "pretrained_file = pretrained_dict[MODEL_NAME] # Use this to train from \"scratch\" (almost) || use next line to fine tune a trained model.\n",
+    "# pretrained_file = \"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-23_22-02-06_MambaBDA_Base_xBD_FOCAL/model_step100000.pth\"\n",
     "FOCAL = True # True || False\n",
+    "\n",
+    "#############################################################################################################\n",
     "\n",
     "FOCAL_str = '_FOCAL' if FOCAL else ''\n",
     "FT_str = '_FT' if 'tr2025' in pretrained_file else '' # 'tr2025' -> already trained model, so new training using this will be a fine tune.\n",
     "\n",
     "\n",
-    "train_dataset_path = train_dataset_paths_dict[DATASET]\n",
-    "train_data_list_path = train_data_list_paths_dict[DATASET]\n",
-    "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
-    "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
+    "train_dataset_path   = dataset_info_dict[DATASET].train_dataset_path\n",
+    "train_data_list_path = dataset_info_dict[DATASET].train_data_list_path\n",
+    "test_dataset_path    = dataset_info_dict[DATASET].test_dataset_path\n",
+    "test_data_list_path  = dataset_info_dict[DATASET].test_data_list_path\n",
     "\n",
     "logfilename = f\"/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/LOGLAR_CMAG/train_{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}.log\"\n",
     "pidfilename = logfilename.replace(\".log\", \".pid.log\")\n",
@@ -136,7 +175,7 @@
     "     --dataset                {DATASET} \\\n",
     "     --batch_size             8 \\\n",
     "     --crop_size              256 \\\n",
-    "     --max_iters              200_000 \\\n",
+    "     --max_iters              400_000 \\\n",
     "     --model_type             {MODEL_NAME} \\\n",
     "     --model_param_path       '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr{now}_{MODEL_NAME}_{DATASET}{FT_str}{FOCAL_str}' \\\n",
     "     --train_dataset_path     {train_dataset_path} \\\n",
@@ -198,27 +237,15 @@
     "from datetime import datetime\n",
     "now = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "cfg_dict = {\n",
-    "    \"MambaBDA_Tiny\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_tiny_224_0229flex.yaml',\n",
-    "    \"MambaBDA_Small\": '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_small_224.yaml',\n",
-    "    \"MambaBDA_Base\" : '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/configs/vssm1/vssm_base_224.yaml',\n",
-    "}\n",
-    "test_dataset_paths_dict = {\n",
-    "    \"xBD\"       : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test',\n",
-    "    \"mwBTFreddy\": '/mnt/storage1/alpgenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0'\n",
-    "}\n",
-    "test_data_list_paths_dict = {\n",
-    "    \"xBD\"       : '/mnt/storage1/alpgenc/change_detection/xBD_complete_png/test_list.txt',\n",
-    "    \"mwBTFreddy\": '/mnt/storage1/alpgenc/change_detection/mwBTFreddy_dataset/mwBTFreddy_v1.0/all_list.txt'\n",
-    "}\n",
+    "\n",
     "\n",
     "MODEL_NAME = 'MambaBDA_Tiny' # \"MambaBDA_Tiny\" || \"MambaBDA_Small\" || \"MambaBDA_Base\"\n",
     "DATASET = \"xBD\" # \"xBD\" || \"mwBTFreddy\" || \"mwBTFreddy_png\"\n",
     "EXTENSION = \"tif\" if DATASET in [\"mwBTFreddy\"] else \"png\"\n",
     "\n",
     "cfg_file = cfg_dict[MODEL_NAME]\n",
-    "test_dataset_path = test_dataset_paths_dict[DATASET]\n",
-    "test_data_list_path = test_data_list_paths_dict[DATASET]\n",
+    "test_dataset_path = dataset_info_dict[DATASET].test_dataset_path\n",
+    "test_data_list_path = dataset_info_dict[DATASET].test_data_list_path\n",
     "\n",
     "# infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_23-51-27_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
     "infer_model_path = '/mnt/storage1/alpgenc/change_detection/ChangeMamba_AG/changedetection/deneme_saved_models/tr2025-09-21_17-52-20_MambaBDA_Tiny_xBD/model_step31250.pth'\n",
